Closed
Bug 235298
Opened 21 years ago
Closed 21 years ago
background image renders page unreadable: shows colored hash on black
Categories
(Core :: Graphics: ImageLib, defect)
Core
Graphics: ImageLib
Tracking
()
RESOLVED
FIXED
People
(Reporter: zimmer, Assigned: tor)
References
()
Details
Attachments
(2 files)
|
2.37 KB,
patch
|
Details | Diff | Splinter Review | |
|
1.52 KB,
patch
|
paper
:
review+
darin.moz
:
superreview+
|
Details | Diff | Splinter Review |
User-Agent:
Build Identifier: Mozilla/5.0 (Windows; U; Windows NT 5.0; en-US; rv:1.6) Gecko/20040113
the background gif by itself looks ok; combined with the page it results in
horizontal black bands with some colored hash in them: one stripe of visible
page, one black band, etc.
page displays fine in Opera 7.21, IE 6.n
Reproducible: Always
Steps to Reproduce:
1.viewing the page results in the problem situation
2.
3.
Actual Results:
see Details box
Expected Results:
rendered the page correctly
I am not associated with the page referenced in this report.
Assignee: general → tor
Status: UNCONFIRMED → NEW
Ever confirmed: true
Component: Browser-General → ImageLib
OS: Windows 2000 → All
Hardware: PC → All
Attachment #142061 -
Flags: review?(paper)
Comment 2•21 years ago
|
||
Comment on attachment 142061 [details] [diff] [review]
identify gif with invalid end-of-stream marker as corrupt
maybe add a comment in the code that points to this bug or explains why we need
to error our there. other than that looks ok to me
Attachment #142061 -
Flags: review?(paper)
Attachment #142144 -
Flags: review?(paper)
Updated•21 years ago
|
Attachment #142144 -
Flags: review?(paper) → review+
Attachment #142144 -
Flags: superreview?(darin)
Comment 4•21 years ago
|
||
Comment on attachment 142144 [details] [diff] [review]
more comments
>Index: GIF2.cpp
>+ if (code == (clear_code + 1)) {
>+ /* end-of-stream should only appear after all image data */
>+ if (rows_remaining != 0)
>+ return -1;
>+ else
>+ return 0;
>+ }
nit: you don't need an else after a return.
>Index: nsGIFDecoder2.cpp
>+ // if the gif is corrupt don't mark the frame as complete, as nsCSSRendering
>+ // will happily try using it try drawing backgrounds
nit: this comment doesn't read right... some missing words between "it" and
"try"?
Attachment #142144 -
Flags: superreview?(darin) → superreview+
Checked in.
Status: NEW → RESOLVED
Closed: 21 years ago
Resolution: --- → FIXED
You need to log in
before you can comment on or make changes to this bug.
Description
•