Bug 235298 - gif with invalid end-of-stream marker wasn't being identified as corrupt.  r=paper, sr=darin